--- a/business-forum/application/index.html
+++ b/business-forum/application/index.html
@@ -7,8 +7,17 @@
 	<meta property="og:site_name" content="Forbesvietnam.com" />
 	<meta property="og:url" content="http://www.forbesvietnam.com/" />
 	<meta property="og:image" content="http://forbesvietnam.com/pics/logo-forum.png" />
-
+	<script src="../../js/jquery-1.8.0.min.js" type="text/javascript"></script>
 	<link rel="publisher" href="https://plus.google.com/108021269859017427558">	
+	<script>
+		$(window).load(function(){
+			//parse URL to set language
+			var url = window.location.href;
+		    var urlAux = url.split('?');
+		    if(urlAux[1]!='')
+		   	 $('#myframe').attr('src','http://14.161.12.247:8080/business-forum/application/?'+urlAux[1]);
+		});
+	</script>
 </head>
 <body style="margin:0px;padding:0px;">
 <iframe id='myframe' frameborder="0" scrolling="no" src="http://14.161.12.247:8080/business-forum/application" width="100%" height='1260' style='min-width:960px'></iframe>
