--- a/index.html
+++ b/index.html
@@ -12,8 +12,9 @@
 	<meta property="og:image" content="http://www.forbesvietnam.com/pics/forbesvietnam_300.jpg" />
 	<meta property="og:description" content="Tạp chí Forbes đã có mặt tại Việt Nam. Theo dõi những sự kiện kinh tế, tài chính nổi bật nhất 2014 và cách làm giàu hiệu quả của các tỉ phú thế giới." />
   
-	<link rel="stylesheet" href="./js/fractionslider.css">		
-    <link rel="stylesheet" href="./css/styleLandingPage.css" type="text/css" />
+	<link rel="stylesheet" href="css/fractionslider.css">		
+	<link rel="stylesheet" href="css/anythingslider.css">
+    <link rel="stylesheet" href="css/styleLandingPage.css" type="text/css" />
 	<link rel="publisher" href="https://plus.google.com/108021269859017427558">	
 
 	<script>
@@ -75,67 +76,23 @@
 			<div class="slider-wrapper" >			
 				<div class="slider" style="width:100%;height:520px;margin: 0 auto;padding-top:20px;">
 					<div class="fs_loader"></div>	
-					<div class="slide">
-						<a href='http://forbesvietnam.com/business-forum/application' target='_blank' data-position="0,0" data-in="fade" data-delay="0" data-out="fade">
-							<img src="./pics/background-forum.png">
-						</a>
-						<a href='http://forbesvietnam.com/business-forum/application' target='_blank' data-position="35,350" data-in="left" data-delay="500" data-out="fade">
-							<img src="./pics/banner-forum1.png">
-						</a>
-						<a href='http://forbesvietnam.com/business-forum/application' target='_blank' data-position="320,175" data-in="right" data-delay="1500" data-out="fade">
-							<img src="./pics/banner-forum2.png" >
-						</a>
-						<a href='http://forbesvietnam.com/business-forum/application' target='_blank' data-position="420,1" data-in="fade" data-delay="2500" data-out="fade">
-							<img src="./pics/banner-forum3.png">
-						</a>
+					<div class="slide" id="slide1">
+						<img src="./pics/background-forum.png" width="1000" height="520" data-position="0,0" data-in="fade" data-delay="0" data-out="fade">
+						<img src="./pics/banner-forum1.png" width="309px" height="234px" data-position="35,350" data-in="left" data-delay="500" data-out="fade">
+						<img src="./pics/banner-forum2.png" width="654px" height="60px" data-position="320,175" data-in="right" data-delay="1500" data-out="fade">
+						<img src="./pics/banner-forum3.png" width="987px" height="83px" data-position="420,1" data-in="fade" data-delay="2500" data-out="fade">
 					</div>						
-					<div class="slide">
-						<a href='./forbespass/?utm_source=banner-landingpage&utm_medium=banner-landingpage&utm_campaign=banner-landingpage' target='_blank' data-position="15,210" data-in="left" data-delay="500" data-out="fade">
-							<img src="./pics/ban6-frame1.png" width="557px" height="138px">
-						</a>
-						<a href='./forbespass/?utm_source=banner-landingpage&utm_medium=banner-landingpage&utm_campaign=banner-landingpage' target='_blank' data-position="175,65" data-in="fade" data-delay="1500" data-out="fade">
-							<img src="./pics/ban6-frame2.png" width="875px" height="265px">
-						</a>
-						<a href='./forbespass/?utm_source=banner-landingpage&utm_medium=banner-landingpage&utm_campaign=banner-landingpage' target='_blank' data-position="455,180" data-in="right" data-delay="2500" data-out="fade">
-							<img src="./pics/ban6-frame3.png" width="690px" height="42px">
-						</a>
+					<div class="slide" id="slide2">
+						<img src="./pics/ban6-frame1.png" width="557px" height="138px" data-position="15,210" data-in="left" data-delay="500" data-out="fade">
+						<img src="./pics/ban6-frame2.png" width="875px" height="265px" data-position="175,65" data-in="fade" data-delay="1500" data-out="fade">
+						<img src="./pics/ban6-frame3.png" width="690px" height="42px" data-position="455,180" data-in="right" data-delay="2500" data-out="fade">
 					</div>	
-					<div class="slide">
-						<a href='http://forbesvietnam.com/business-forum/application' target='_blank' data-position="0,0" data-in="fade" data-delay="0" data-out="fade">
-							<img src="./pics/background-forum.png" width="1000px" height="500px">
-						</a>
-						<a href='http://forbesvietnam.com/business-forum/application' target='_blank' data-position="35,350" data-in="left" data-delay="500" data-out="fade">
-							<img src="./pics/banner-forum4.png" width="309px" height="234px">
-						</a>
-						<a href='http://forbesvietnam.com/business-forum/application' target='_blank' data-position="320,130" data-in="right" data-delay="1500" data-out="fade">
-							<img src="./pics/banner-forum5.png" width="744px" height="32px">
-						</a>
-						<a href='http://forbesvietnam.com/business-forum/application' target='_blank' data-position="420,1" data-in="fade" data-delay="2500" data-out="fade">
-							<img src="./pics/banner-forum6.png" width="987px" height="83px">
-						</a>
-					</div>						
-					<div class="slide">
-						<a href='./forbespass/?utm_source=banner-landingpage&utm_medium=banner-landingpage&utm_campaign=banner-landingpage' target='_blank' data-position="117,0" data-in="left" data-delay="500" data-out="fade">
-							<img src="./pics/ban8-frame1.png" width="495px" height="403px" >
-						</a>
-						<a href='./forbespass/?utm_source=banner-landingpage&utm_medium=banner-landingpage&utm_campaign=banner-landingpage' target='_blank' data-position="40,500" data-in="left" data-delay="1500" data-out="fade">
-							<img src="./pics/ban8-frame2.png" width="451px" height="99px" >
-						</a>
-						<a href='./forbespass/?utm_source=banner-landingpage&utm_medium=banner-landingpage&utm_campaign=banner-landingpage' target='_blank' data-position="170,500" data-in="fade" data-delay="2500" data-out="fade">
-							<img src="./pics/ban8-frame3.png" width="498px" height="328px" >
-						</a>
-					</div>					
-					<div class="slide">
-						<a href='./forbespass/?utm_source=banner-landingpage&utm_medium=banner-landingpage&utm_campaign=banner-landingpage' target='_blank' data-position="50,50" data-in="left" data-delay="500" data-out="fade">
-							<img src="./pics/ban7-frame1.png" width="450px" height="108px" >
-						</a>
-						<a href='./forbespass/?utm_source=banner-landingpage&utm_medium=banner-landingpage&utm_campaign=banner-landingpage' target='_blank' data-position="190,10" data-in="left" data-delay="1500" data-out="fade">
-							<img src="./pics/ban7-frame2.png" width="494px" height="308px" >
-						</a>
-						<a href='./forbespass/?utm_source=banner-landingpage&utm_medium=banner-landingpage&utm_campaign=banner-landingpage' target='_blank' data-position="14,580" data-in="fade" data-delay="2500" data-out="fade">
-							<img src="./pics/ban7-frame3.png" width="378px" height="507px" >
-						</a>
-					</div>	
+					<div class="slide" id="slide3">
+						<img src="./pics/background-forum.png" width="1000px" height="520px" data-position="0,0" data-in="fade" data-delay="0" data-out="fade">
+						<img src="./pics/banner-forum4.png" width="309px" height="234px" data-position="35,350" data-in="left" data-delay="500" data-out="fade">
+						<img src="./pics/banner-forum5.png" width="744px" height="32px" data-position="320,130" data-in="right" data-delay="1500" data-out="fade">
+						<img src="./pics/banner-forum6.png" width="987px" height="83px" data-position="420,1" data-in="fade" data-delay="2500" data-out="fade">	
+					</div>		
 				</div>
 			</div>
 		</div>
@@ -534,47 +491,11 @@
 <script src="js/jquery.easing.1.3.js" type="text/javascript"></script>
 <script src="js/jquery.nav.js" type="text/javascript"></script>
 <script src="js/jquery.scrollTo.js" type="text/javascript"></script>
-<script src="js/page.js" type="text/javascript"></script>
 <script src="js/jqFancyTransitions.1.8.js" type="text/javascript"></script>
-<script src="./js/jquery.fractionslider.js" type="text/javascript" charset="utf-8"></script>
+<script src="js/jquery.fractionslider.js" type="text/javascript" charset="utf-8"></script>
+<script src="js/jquery.anythingslider.js"></script>
+<script src="js/jquery.cookie.js"></script>
+<script src="js/page.js" type="text/javascript"></script>
 
-	<link rel="stylesheet" href="css/anythingslider.css">
-	<script src="js/jquery.anythingslider.js"></script>
-		<script>
-			$(document).ready(function () {
-			// Returns width of browser viewport
-			//alert($( window ).width());
-			 
-			// Returns width of HTML document
-			//alert($( document ).width());
-				$('#nav').onePageNav({
-					currentClass: 'actedTab'
-				});
-				$('#gallery').jqFancyTransitions({ 
-					width: 1000, 
-					height: 350,
-					navigation: true,
-					effect: 'wave'
-				});
-				$('#news').anythingSlider({
-					stopAtEnd: false,
-					autoPlay: true,
-					hashTags:false
-				});
-			});
-			
-		</script>
-
-		<script>
-			 $('.slider').fractionSlider({
-				'fullWidth': 			false,
-				'controls': 			true, 
-				'pager': 				true,
-				'responsive': 			true,
-				'dimensions': 			"1000,400",
-				'pauseOnHover': 		true,
-				'slideEndAnimation': 	true
-			});
-		</script>
 </body>
 </html>
