channge business forum

--- a/business-forum/index.htm
+++ b/business-forum/index.htm
@@ -1,17 +1,8 @@
 ﻿<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" style="margin:0px;padding:0px;">
 <head>
-	<title>Forbes Vietnam Business Forum 2014</title>
-    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-	<meta name="description" content="Tạp chí Forbes đã có mặt tại Việt Nam. Theo dõi những sự kiện kinh tế, tài chính nổi bật nhất 2014 và cách làm giàu hiệu quả của các tỉ phú thế giới."/>
-	<meta name="keywords" content="đặt mua forbes, tap chi forbes vietnam dai han, tạp chí forbes việt nam dài hạn, fobes, forbest, mua forbes viet nam ho chi minh, forbes việt nam tại hà nội, forbes việt nam tại hồ chí minh, bảng xếp hạng forbes, danh sách forbes việt nam 2013, forbes 2014"/>
-	<meta property="og:title" content="Forbes Vietnam Business Forum 2014" />
-	<meta property="og:site_name" content="forbesvietnam.com" />
-	<meta property="og:url" content="http://www.forbesvietnam.com/" />
-	<meta property="og:image" content="http://forbesvietnam.com/pics/logo-forum.png" />
-	<meta property="og:description" content="Tạp chí Forbes đã có mặt tại Việt Nam. Theo dõi những sự kiện kinh tế, tài chính nổi bật nhất 2014 và cách làm giàu hiệu quả của các tỉ phú thế giới." />
-  	<meta http-equiv="refresh" content="0; url=./home">
-	<link rel="publisher" href="https://plus.google.com/108021269859017427558">	
+  	<meta http-equiv="refresh" content="0; url=http://sukien.forbesvietnam.com/business-forum/home">
+
 </head>
 
 <body style="margin:0px;padding:0px;">
