change business forum 2
change sukien -> event

--- a/business-forum/index.htm
+++ b/business-forum/index.htm
@@ -1,7 +1,7 @@
 ﻿<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" style="margin:0px;padding:0px;">
 <head>
-  	<meta http-equiv="refresh" content="0; url=http://sukien.forbesvietnam.com/business-forum/home">
+  	<meta http-equiv="refresh" content="0; url=http://event.forbesvietnam.com/business-forum/home">
 
 </head>
 
