--- a/index.html
+++ b/index.html
@@ -312,7 +312,7 @@
 						<li class='y2014 firstYear' >        
 							<div class="event2014">
 								<div id="wrap-image">
-								<a target="_blank" href="http://sukien.forbesvietnam.com/business-forum/home"><img class="imglistitem" src="http://forbesvietnam.com/pics/logo-forum.png"></a>
+								<a target="_blank" href="http://event.forbesvietnam.com/business-forum/home"><img class="imglistitem" src="http://forbesvietnam.com/pics/logo-forum.png"></a>
 								</div>
 								<div class="f14 padB10 padT10  ">
 									<a target="_blank" class="clor59" href="http://forbesvietnam.com/business-forum">03.07.2014 tại Tp. Hồ Chí Minh</a>
