--- a/business-forum/application/index.html
+++ b/business-forum/application/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="vi" xmlns="http://www.w3.org/1999/xhtml" xmlns:og="http://ogp.me/ns#" xmlns:fb="https://www.facebook.com/2008/fbml" >
 <head>
-	<meta http-equiv="refresh" content="0; url=http://sukien.forbesvietnam.com/business-forum/application">
+	<meta http-equiv="refresh" content="0; url=http://event.forbesvietnam.com/business-forum/application">
 </head>
 <body style="margin:0px;padding:0px;">
 </body>
