--- a/index.html
+++ b/index.html
@@ -76,23 +76,31 @@
 			<div class="slider-wrapper" >			
 				<div class="slider" style="width:100%;height:520px;margin: 0 auto;padding-top:20px;">
 					<div class="fs_loader"></div>	
-					<div class="slide" id="slide1">
-						<img src="./pics/background-forum.png" width="1000" height="520" data-position="0,0" data-in="fade" data-delay="0" data-out="fade">
+					<div class="slide" id="slide1" data-out='fade'>
+						<img src="./pics/background-forum.png" width="1000" height="520" data-fixed>
 						<img src="./pics/banner-forum1.png" width="309px" height="234px" data-position="35,350" data-in="left" data-delay="500" data-out="fade">
 						<img src="./pics/banner-forum2.png" width="654px" height="60px" data-position="320,175" data-in="right" data-delay="1500" data-out="fade">
 						<img src="./pics/banner-forum3.png" width="987px" height="83px" data-position="420,1" data-in="fade" data-delay="2500" data-out="fade">
 					</div>						
 					<div class="slide" id="slide2">
-						<img src="./pics/ban6-frame1.png" width="557px" height="138px" data-position="15,210" data-in="left" data-delay="500" data-out="fade">
-						<img src="./pics/ban6-frame2.png" width="875px" height="265px" data-position="175,65" data-in="fade" data-delay="1500" data-out="fade">
-						<img src="./pics/ban6-frame3.png" width="690px" height="42px" data-position="455,180" data-in="right" data-delay="2500" data-out="fade">
+						<img src="./pics/background-banner2.png" width="1000" height="520" data-fixed>
+						<img src="./pics/banner1-item1.png" width="416px" height="77px" data-position="25,280" data-in="top" data-delay="500" data-out="fade">
+						<img src="./pics/banner1-item2.png" width="772px" height="408px" data-position="112,120" data-in="fade" data-delay="1500" data-out="fade">
+						<img src="./pics/banner1-item3.png" width="234px" height="51px" data-position="110,360" data-in="fade" data-delay="2500" data-out="fade">
 					</div>	
 					<div class="slide" id="slide3">
-						<img src="./pics/background-forum.png" width="1000px" height="520px" data-position="0,0" data-in="fade" data-delay="0" data-out="fade">
+						<img src="./pics/background-forum.png" width="1000px" height="520px" data-fixed>
 						<img src="./pics/banner-forum4.png" width="309px" height="234px" data-position="35,350" data-in="left" data-delay="500" data-out="fade">
-						<img src="./pics/banner-forum5.png" width="744px" height="32px" data-position="320,130" data-in="right" data-delay="1500" data-out="fade">
+						<img src="./pics/banner-forum5.png" width="773px" height="32px" data-position="320,130" data-in="right" data-delay="1500" data-out="fade">
 						<img src="./pics/banner-forum6.png" width="987px" height="83px" data-position="420,1" data-in="fade" data-delay="2500" data-out="fade">	
 					</div>		
+					<div class="slide" id="slide4">
+						<img src="./pics/background-banner2.png" width="1000" height="520" data-fixed>
+						<img src="./pics/banner2-item1.png" width="628px" height="391px" data-position="140,0" data-in="left" data-delay="500" data-out="fade">
+						<img src="./pics/banner2-item2.png" width="402px" height="88px" data-position="30,130" data-in="fade" data-delay="1500" data-out="fade">
+						<img src="./pics/banner2-item3.png" width="328px" height="519px" data-position="1,620" data-in="right" data-delay="2500" data-out="fade">
+						<img src="./pics/banner2-item4.png" width="633px" height="78px" data-position="425,10" data-in="fade" data-delay="3500" data-out="fade">
+					</div>	
 				</div>
 			</div>
 		</div>
@@ -451,7 +459,7 @@
 					</tr>
 					<tr>
 						<td style="vertical-align: middle;" width="100px" height="135px">Nội dung (*):</td>
-						<td><textarea id="content" name="content" type='text' style="width:100%; height:135px; border-radius:5px; font-size:17px;border:0;" maxlength='200'></textarea></td>
+						<td><textarea id="content" name="content" type='text' style="width:100%; height:135px; border-radius:5px; font-size:17px;border:0;overflow:hidden" maxlength='200'></textarea></td>
 					</tr>
 					<tr>
 						<td style="vertical-align: middle;" width="100px" height="35px" ></td>
@@ -486,7 +494,11 @@
 		</div>
 	</div>
     <div class="clear"></div>
-    
+    <div class="popup" style='width:100%;height:100%;background:url(./pics/background-opa.png) repeat;position:fixed;top:0;left:0;z-index:100000'>
+    	<div class='popup-content' style="background:url(./pics/background-popup.png) no-repeat;background-position:50% 50%;width:100%;height:100%;margin:0 auto;">
+    		<a href='#' target='_blank'><img src='./pics/btn_popup.png' style="position:relative;top:320px;left:330px"></a>
+		</div>
+    </div>
 <script src="js/jquery-1.8.0.min.js" type="text/javascript"></script>
 <script src="js/jquery.easing.1.3.js" type="text/javascript"></script>
 <script src="js/jquery.nav.js" type="text/javascript"></script>
